--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>ProyectoAngular</title>
+  
   <base href="/">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+
+  <link href="css/bootstrap.css" rel="stylesheet" />
+  <link href="css/rotating-card.css" rel="stylesheet" />
+  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
